--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,8 @@ dependencies {
     runtimeOnly 'org.postgresql:postgresql:42.7.3'
     
     // OpenAPI/Swagger Documentation
-    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
+    //implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.0'
     
     // Testing
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
